# actix-template

./: Cargo.toml  docker-compose.yaml
src/: main.rs
src/app/: app_config.rs  mod.rs
src/app/user/: controller.rs  mod.rs  model.rs  service.rs  types.rs
src/core/: logger.rs
src/core/utils/: helpers.rs  mod.rs  repository.rs
src/core/utils/repositories/: user_repository.rs
