[package]
name = "template"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
actix-web = "4.5.1"
dotenv = "0.15.0"
actix = "0.13.3"
mongodb = {version = "2.8.2", features = ["tokio-sync"]}
log = "0.4.21"
env_logger = "0.11.3"
futures = "0.3.30"
